--- a/app/src/main/res/layout/activity_simple_service_client.xml
+++ b/app/src/main/res/layout/activity_simple_service_client.xml
@@ -12,18 +12,69 @@
         android:layout_margin="16dp"
         android:layout_weight="1"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btn_start"
+            style="@style/Btn1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_marginBottom="0dp"
+            android:layout_weight="1"
+            android:text="start service"
+            android:textAllCaps="false"/>
+
+        <Button
+            android:id="@+id/btn_stop"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
+            android:text="stop service"
+            android:textAllCaps="false"/>
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btn_bind"
+            style="@style/Btn1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_marginBottom="0dp"
+            android:layout_weight="1"
+            android:text="bind service"
+            android:textAllCaps="false"/>
+
+        <Button
+            android:id="@+id/btn_unbind"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_weight="1"
+            android:text="unbind service"
+            android:textAllCaps="false"/>
+    </LinearLayout>
+
     <Button
-        android:id="@+id/btn_start"
+        android:id="@+id/btn_get_count"
         style="@style/Btn1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="start service"/>
-
-    <Button
-        android:id="@+id/btn_stop"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:text="stop service"/>
+        android:layout_margin="5dp"
+        android:layout_marginBottom="0dp"
+        android:text="get count"
+        android:textAllCaps="false"/>
 </LinearLayout>
