--- a/app/src/main/res/layout/activity_simple_service_client.xml
+++ b/app/src/main/res/layout/activity_simple_service_client.xml
@@ -5,12 +5,20 @@
               android:background="#fff"
               android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="16dp"
-        android:layout_weight="1"/>
+        android:background="#f8f8f8"
+        android:layout_weight="1">
+
+        <TextView
+            android:id="@+id/tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"/>
+
+    </ScrollView>
 
     <LinearLayout
         android:layout_width="match_parent"
