--- a/app/src/main/res/layout/activity_messenger_service_client.xml
+++ b/app/src/main/res/layout/activity_messenger_service_client.xml
@@ -85,6 +85,6 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:layout_marginBottom="0dp"
-        android:text="get count"
+        android:text="send msg"
         android:textAllCaps="false"/>
 </LinearLayout>
